css/style.css
:root {
    --color-black: #181010;
    --color-violet: #84739c;
    --color-rose: #f7b58c;
    --color-violet-l: #ffefff;
    --color-white: rgba(255, 255, 255, 0.9);
}

body {
    background-color: var(--color-violet-l);
    color: var(--color-white);
    margin: 0;
}

.util-hidden {
    display: none;
    visibility: hidden;
}

.container {
    margin: 0 16px;
}

header {
    background-color: var(--color-violet);
    margin-bottom: 32px;
}

header svg {
    display: none;
}

header .container {
    max-width: 920px;
    margin: 0 auto;
    padding: 0 16px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header .logo {
    max-height: 60px;
    margin-left: -4px;
}

header .main-menu {
    display: flex;
}

header .main-menu a {
    padding: 32px 8px;
    color: var(--color-white);
    text-decoration: none;
    font-weight: 600;
}

header .main-menu a:hover {
    color: var(--color-rose);
}

header .main-menu .active {
    color: var(--color-rose);
}

.poke-container {
    max-width: 920px;
    margin: 0 auto;
    justify-content: space-between;
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
}

.poke-card {
    width: 200px;
    margin-bottom: 16px;
}

.poke-img-card {
    height: 150px;
    border-radius: 8px 8px 0 0;
    background-color: var(--color-violet);
    background-image: url('https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png');
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    transition: 1s;
}

.poke-card:hover > .poke-img-card {
    background-color: var(--color-black);
}

.poke-title {
    background-color: var(--color-rose);
    padding: 8px;
    border-radius: 0 0 8px 8px;
    text-align: center;
    transition: 1s;
}

.poke-title span {
    font-weight: 600;
    color: var(--color-white);
}

.poke-card:hover > .poke-body-card .poke-title {
    background-color: var(--color-violet);
    color: var(--color-violet);
}

@media screen and (max-width: 599px) {
    .container {
        margin: 0;
    }

    header {
        padding: 8px 0;
    }

    header .container {
        flex-direction: row-reverse;
    }

    header .logo {
        max-height: 40px;
    }

    header svg {
        fill-rule: evenodd;
        clip-rule: evenodd;
        stroke-linecap: round;
        stroke-linejoin: round;
        stroke-miterlimit: 1.5;
        cursor:pointer;
        height: 25px;
        width: 50px;
    }

    header svg path {
        fill: none;
        stroke: white;
        stroke-width: 1px;
    }

    header #top, #bottom {
        stroke-dasharray: 30, 75.39;
        transition: all 0.6s cubic-bezier(0.6, 0.33, 0.67, 1.29);
    }

    header svg.active #top, header svg.active #bottom {
        stroke-dasharray: 75.39;
        stroke-dashoffset: -60;
    }

    header .main-menu {
        display: none;
    }

    .poke-container {
        justify-content: center;
    }

    .poke-card {
        width: 100%;
    }

    .poke-img-card {
        height: 200px;
        border-radius: 0;
    }

    .poke-title {
        border-radius: 0;
    }

}

